--- a/react_ui/package.json
+++ b/react_ui/package.json
@@ -2,20 +2,50 @@
   "name": "react_ui",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "build": "react-scripts build",
+    "clean:deps": "rm -rf node_modules && yarn cache clean && yarn install",
+    "eject": "react-scripts eject",
+    "format-check": "prettier -c .",
+    "format-fix": "prettier -w .",
+    "start": "PORT=4000 react-scripts start",
+    "test": "react-scripts test"
+  },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.5",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.0",
+    "@mui/styled-engine-sc": "^5.6.1",
+    "@mui/x-data-grid": "^6.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "axios": "^0.26.1",
+    "framer-motion": "^10.11.2",
+    "immutability-helper": "^3.1.1",
+    "jwt-decode": "^4.0.0",
+    "prettier": "^2.8.7",
+    "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.2.2",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-pro-sidebar": "^1.0.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
+    "serve": "^14.2.1",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "eslintConfig": {
     "extends": [
