--- a/react_ui/package.json
+++ b/react_ui/package.json
@@ -12,12 +12,13 @@
     "test": "react-scripts test"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.5",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.0",
+    "@mui/material": "^5.15.7",
     "@mui/styled-engine-sc": "^5.6.1",
+    "@mui/styles": "^5.15.7",
     "@mui/x-data-grid": "^6.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
